k8s/memos/memos-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: memos
  namespace: memos
  labels:
    app: memos
spec:
  serviceName: memos
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:0.31.0@sha256:24c2707ddd8fbd2ceaa7a61ecab86a53cdcde640b24ce572b73da14b00b5785f
          ports:
            - name: http
              containerPort: 5230
              protocol: TCP
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
          volumeMounts:
            - name: memos-data
              mountPath: /var/opt/memos
          livenessProbe:
            httpGet:
              path: /
              port: 5230
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5230
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: memos-data
          persistentVolumeClaim:
            claimName: memos-data-pvc
